Filter, registration, homepage and so on

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,15 @@
 		<param-name>dbDriver</param-name>
 		<param-value>com.mysql.cj.jdbc.Driver</param-value>
 	</context-param>
+	<filter>
+		<filter-name>UserChecker</filter-name>
+		<filter-class>it.polimi.tiw.filters.UserChecker</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>UserChecker</filter-name>
+		<!-- TODO aggiungere tutte le servlet! -->
+		<url-pattern>/GoToHome</url-pattern>
+	</filter-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
