--- a/RIA/.project
+++ b/RIA/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TIW_Project_2023</name>
+	<name>RIA</name>
 	<comment></comment>
 	<projects>
 	</projects>
