--- a/RIA/src/main/webapp/WEB-INF/web.xml
+++ b/RIA/src/main/webapp/WEB-INF/web.xml
@@ -26,19 +26,18 @@
 		<url-pattern>/index.html</url-pattern>
 		<url-pattern>/Home.html</url-pattern>
 	</filter-mapping>
-	<!-- TODO da mettere a posto poi questa parte qui
 	<filter>
 		<filter-name>UserChecker</filter-name>
 		<filter-class>it.polimi.tiw.filters.UserChecker</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>UserChecker</filter-name>
-		<url-pattern>/GoToHome</url-pattern>
-		<url-pattern>/CopyCategory</url-pattern>
+		<url-pattern>/ChangeCategoryName</url-pattern>
+		<url-pattern>/GetCategories</url-pattern>
 		<url-pattern>/CreateCategory</url-pattern>
 		<url-pattern>/InsertCopiedCategory</url-pattern>
 		<url-pattern>/Logout</url-pattern>
-	</filter-mapping>  -->
+	</filter-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
